--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,13 +75,13 @@
 
 					<div id="give_feedback_tab" class="GiveFeedbackTab navbar-inner">
 						<span id="give_feedback_tab_text" class="newsText h5">
-							<%= link_to "Add Event", "#giveFeedback", :role => "button", :data => {:toggle => "modal"}  %>
+							<%= link_to "Give Feedback", "#giveFeedback", :role => "button", :data => {:toggle => "modal"}  %>
 						</span>
 					</div>
 
 					<div id="view_feedbacks_tab" class="ViewFeedbacksTab navbar-inner">
 						<span id="view_feedbacks_tab_text" class="newsText h5">
-							<%= link_to "View Feedbacks", "/feedbacks/viewfeedbacks", :remote => true, :id => "spor" %>
+							<%= link_to "View Feedbacks", "/feedback/ViewFeedbacks", :remote => true, :id => "spor" %>
 						</span>
 					</div>	
 						
@@ -136,6 +136,29 @@
 			
 				</div>
 
+				<!-- Start of code for feedback/comment using Disqus -->
+
+				<div id="disqus_thread">
+			
+				</div>
+    	
+    			<script type="text/javascript">
+        			/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+	        		var disqus_shortname = 'eventmanagementap'; // required: replace example with your forum shortname
+
+    	    		/* * * DON'T EDIT BELOW THIS LINE * * */
+        			(function() {
+            			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            			dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            			(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        			})();
+    			</script>
+	    		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> 
+    			<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    			
+    			<!-- End of code for feedback/comment using Disqus -->
+
+
 				<div id="addEvent" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
 					<div class="modal-header">
@@ -147,7 +170,7 @@
  
 					<div class="modal-body">
     	
-						<%= form_for :event, :html => { :onsubmit => 'return validateFeedback();' }, :url => { :controller => 'event', :action => 'AddEvent', :method => 'post' } do |f| %>
+						<%= form_for :event, :html => { :onsubmit => 'return validateEvent();' }, :url => { :controller => 'event', :action => 'AddEvent', :method => 'post' } do |f| %>
 	
 							<%= f.label :title %>
 							<%= f.text_field :title, :id => 'title', :size => 20, :class => 'textarea' %><br />
@@ -178,19 +201,45 @@
 							
   				</div>
 
-			</div>
 
+  				<div id="giveFeedback" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
+					<div class="modal-header">
+    					
+    					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+    					<h3 id="myModalLabel">Add Event</h3>
+  		
+  					</div>
+ 
+					<div class="modal-body">
+    	
+						<%= form_for :feedback, :html => { :onsubmit => 'return validateFeedback();' }, :url => { :controller => 'feedback', :action => 'GiveFeedback', :method => 'post' } do |f| %>
+	
+							<%= f.label :Name %>
+							<%= f.text_field :name, :id => 'name', :size => 20, :class => 'textarea' %><br />
+							<%= f.label :Email %>
+							<%= f.text_field :email, :id => 'email', :size => 20, :class => 'textarea' %><br />
+							<%= f.label :Feedback %>
+							<%= f.text_area :feedback, :id => 'feedback', :rows => 5, :cols => 5, :class => 'textarea' %><br />
+									
+					</div>
+  
+  					<div class="modal-footer">
+	
+							<%= submit_tag "Give Feedback ", :class => 'button' %>
 
+						<% end %>
 
+					</div>	
 
-
-
-			</div>
-
-
-		</div>
 		
+							
+  				</div>
+
+			</div>
+
+			
+		</div>
 
 	</body>
 
